# eoneural

./: .gitignore  CMakeLists.txt  activation.c  activation.h  interface.c  main.c  makefile  network.c  network.h  neuron.c  neuron.h  out.net  readme.md  test_num  trained.net  utils.h
include/eoneural/: batch.h  network.h  neuron.h  utils.h
include/eoneural/hpp/: BasicContext.hpp  Batch.hpp  BatchContext.hpp  Logger.hpp  Network.hpp  Objective.hpp  Observation.hpp  Trial.hpp  Util.hpp
script/: draw_classification.py  draw_network.py  draw_regression.py  make_plots.py
src/eoneural/: CMakeLists.txt  activation.c  batch.c  network.c  neuron.c
src/eoneural/hpp/: BasicContext.cpp  Batch.cpp  BatchContext.cpp  CMakeLists.txt  Network.cpp
src/test/: CMakeLists.txt  TrainTest.cpp
